--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -26,17 +26,17 @@ $c-black: #000;
 $c-accent: var(--c-accent);
 $c-accent-hover: #2427e1;
 $c-notifications: #EF4444;
+$c-text-breadcrumbs: #878E9C;
+$c-bg-dark: #101010;
 
 
 $c-accent-2: #FC00FF;
 $c-text: var(--c-text);
 $c-text-editor: #3F3A39;
-$c-text-breadcrumbs: #878E9C;
 $c-text-light: #9299A7;
 $c-text-light-1: #EDF0F6;
 $c-bg-main: #EDF0F6;
 $c-bg-main-hover: #EAF0FC;
-$c-bg-dark: #0F0908;
 $c-bg-input: #EDF0F6;
 $c-bg-compare: #F4F7F9;
 $c-grey: #202020;
