--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -129,7 +129,7 @@ block content
             .section__container
                 h1.title.title--64.pages-list__title Страницы
                 .pages-list__links
-                    a.pages-list__link.pages-list__link--work(href="home.html" target="_blank") Вход (на макете - "Поставщикам")
+                    a.pages-list__link.pages-list__link--check(href="home.html" target="_blank") Вход (на макете - "Поставщикам")
 
                 .title.title--36.pages-list__subtitle Личный кабинет поставщика
                 .pages-list__links
