--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -7,12 +7,4 @@ block variables
 
 block content
 	.page-layout(data-js="pageLayout")
-
-		section.section
-			.section__container
-				.section-block.section-block--dark
-					.section-block__bg
-						picture
-							source(srcset="img/" media="(max-width: 767px)")
-							img(src="img/")
-					.section-block__content
+		+img-intro
