--- a/src/blocks/components/form/form.scss
+++ b/src/blocks/components/form/form.scss
@@ -39,7 +39,7 @@
         text-align: center;
         width: 100%;
         padding: 0 34px;
-        font-family: $ff-rooftop;
+        font-family: $ff-inter;
         font-weight: 500;
         margin-bottom: 24px;
     }
@@ -59,7 +59,7 @@
     }
 
     &__list-delete.btn {
-        font-family: $ff-rooftop;
+        font-family: $ff-inter;
         font-size: 16px;
         gap: 7px;
 
@@ -285,7 +285,7 @@
     &__marker {
         flex: 0 0 70px;
         text-align: center;
-        font-family: $ff-rooftop;
+        font-family: $ff-inter;
         font-weight: 800;
         font-size: 52px;
         line-height: 56px;
@@ -601,7 +601,7 @@
     }
 
     &__title {
-        font-family: $ff-rooftop;
+        font-family: $ff-inter;
         font-weight: 500;
         font-size: 22px;
         line-height: 130%;
@@ -733,7 +733,7 @@
     }
 
     &__changed {
-        font-family: $ff-rooftop;
+        font-family: $ff-inter;
         font-weight: 400;
         font-size: 16px;
         line-height: 100%;
