--- a/src/blocks/components/spoiler/spoiler.scss
+++ b/src/blocks/components/spoiler/spoiler.scss
@@ -31,7 +31,7 @@
         align-items: center;
         gap: 15px;
         color: $c-text;
-        font-family: $ff-rooftop;
+        font-family: $ff-inter;
         font-weight: 500;
         font-size: 20px;
         line-height: 130%;
