--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -7,30 +7,31 @@
 
     &__section.section {
         background-color: $c-bg-main;
-        padding-bottom: 0;
-        padding-top: 20px;
+        padding-top: 12px;
+        padding-bottom: 12px;
         transition: all $tr-time linear;
 
         @include max(laptop) {
-            padding-bottom: 0;
-            padding-top: 20px;
+            padding-bottom: 12px;
+            padding-top: 12px;
+        }
+
+        @include max(laptop-small) {
+            padding-bottom: 10px;
+            padding-top: 10px;
+            background-color: $c-white;
         }
 
         @include max(mobile) {
             padding: 10px;
-            background-color: $c-white;
         }
     }
 
     &__container {
-        @include max(tablet) {
-            display: flex;
-            gap: 6px;
-            align-items: stretch;
-            min-height: 76px;
-        }
 
-        @include max(mobile) {
+        @include max(laptop-small) {
+            display: flex;
+            align-items: stretch;
             min-height: 36px;
             gap: 16px;
         }
@@ -41,9 +42,10 @@
         display: flex;
         align-items: stretch;
         gap: 8px;
+        width: 100%;
 
-        @include max(tablet) {
-            display: contents;
+        @include max(laptop-small) {
+            min-height: 36px;
         }
     }
 
@@ -63,6 +65,10 @@
         @include max(tablet) {
             padding: 6px;
         }
+
+        @include max(mobile) {
+            padding: 0;
+        }
     }
 
     &__left {
@@ -71,18 +77,8 @@
         padding-left: 14px;
         padding-right: 14px;
 
-        @include max(tablet) {
-            order: -1;
-            padding-left: 14px;
-            padding-right: 14px;
-        }
-
-        @include max(tablet-small) {
-            flex: 0 0 148px;
-        }
-
-        @include max(mobile) {
-            display: contents;
+        @include max(laptop-small) {
+            padding: 0;
         }
     }
 
@@ -121,17 +117,10 @@
     &__notifications {
         overflow: visible;
 
-        @include max(tablet) {
+        @include max(laptop-small) {
             display: none;
         }
     }
-
-    &__callback {
-        @include max(mobile) {
-            display: none;
-        }
-    }
-
 
     &__menu {
         flex: 1 1 auto;
@@ -139,19 +128,19 @@
         overflow: visible;
         align-items: stretch;
 
-        @include max(tablet) {
-            flex: 0 1 auto;
-            order: -1;
-            gap: 16px;
-        }
-
-        @include max(mobile) {
-            display: contents;
+        @include max(laptop-small) {
+            display: none;
         }
     }
 
     &__lk {
         flex: 0 0 auto;
+    }
+
+    &__entry {
+        @include max(mobile) {
+            padding: 11px 26px;
+        }
     }
 }
 
@@ -159,11 +148,11 @@
     &.small &__section.section {
         background-color: transparent;
 
-        @include min(mobile) {
+        @include min(laptop-small) {
             padding-top: 4px;
         }
 
-        @include max(mobile) {
+        @include max(laptop-small) {
             background-color: $c-white;
         }
     }
@@ -181,11 +170,11 @@
 
 .header-notifications {
     position: relative;
-    height: 100%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: $c-text-breadcrumbs;
+    color: $c-text;
     transition: color $tr-time linear;
 
     &:hover {
@@ -193,47 +182,25 @@
     }
 
     svg {
-        width: 25px;
-        height: 25px;
+        width: 19px;
+        height: 24px;
     }
 
     &__count {
         position: absolute;
-        right: -20px;
-        top: 0;
-        padding: 3px 6px;
+        left: 10px;
+        top: -8px;
+        padding: 1px 3.7px;
         background-color: $c-notifications;
         font-weight: 600;
-        font-size: 14px;
-        line-height: 100%;
+        font-size: 12px;
+        line-height: 150%;
         letter-spacing: 0;
         color: $c-white;
-        border-radius: 8px;
+        border-radius: 50px;
     }
 
     &__text {
-        display: none;
-    }
-}
-
-.header-notifications {
-    &--burger {
-        width: 100%;
-        gap: 6px;
-        justify-content: flex-start;
-    }
-
-    &--burger &__text {
-        display: block;
-    }
-
-    &--burger &__count {
-        position: relative;
-        right: 0;
-        top: 0;
-    }
-
-    &--burger svg {
         display: none;
     }
 }
@@ -267,7 +234,7 @@
         }
 
         &--mob {
-            @include min(tablet-small) {
+            @include min(laptop-small) {
                 display: none;
             }
         }
@@ -292,6 +259,7 @@
     }
 
     &__link {
+        position: relative;
         font-family: $ff-inter;
         font-weight: 500;
         font-size: 16px;
@@ -300,12 +268,30 @@
         color: $c-text;
         transition: all $tr-time linear;
 
+        @include max(laptop) {
+            font-size: 13px;
+        }
+
         &:hover {
             color: $c-accent-hover;
         }
 
         @include max(tablet) {
             font-size: 13px;
+        }
+
+        span {
+            position: absolute;
+            left: calc(100% + 1px);
+            top: -9.5px;
+            padding: 1px 3.7px;
+            background-color: $c-accent;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 150%;
+            letter-spacing: 0;
+            color: $c-white;
+            border-radius: 50px;
         }
     }
 
@@ -315,12 +301,21 @@
         padding: 8px 6px;
     }
 
-    &__icon svg {
+    &__icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 11px;
         height: 10px;
-        transform: rotate(0);
-        transition: all $tr-time linear;
+
+        svg {
+            width: 11px;
+            height: 10px;
+            transform: rotate(0);
+            transition: all $tr-time linear;
+        }
     }
+
 
     &__item:hover &__icon svg {
         transform: rotate(-180deg);
@@ -376,6 +371,7 @@
         flex-direction: column;
         align-items: stretch;
         gap: 20px;
+        display: flex;
 
         @include max(mobile) {
             display: flex;
@@ -385,12 +381,6 @@
     &--burger &__item {
         flex-direction: column;
         align-items: flex-start;
-
-        &--mob {
-            @include min(tablet-small) {
-                display: none;
-            }
-        }
     }
 
     &--burger &__header {
@@ -403,11 +393,30 @@
     }
 
     &--burger &__link {
-        font-weight: 600;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        font-family: $ff-inter;
+        font-weight: 400;
         font-size: 16px;
         line-height: 100%;
         letter-spacing: 0;
         color: $c-text-breadcrumbs;
+
+        span {
+            position: relative;
+            top: 0;
+            left: 0;
+            font-family: $ff-inter;
+            padding: 1px 3.7px;
+            background-color: $c-accent;
+            font-weight: 600;
+            font-size: 80%;
+            line-height: 150%;
+            letter-spacing: 0;
+            color: $c-white;
+            border-radius: 50px;
+        }
     }
 
     &--burger &__icon--open {
@@ -471,7 +480,7 @@
     height: 100%;
     position: relative;
 
-    @include max(tablet) {
+    @include max(laptop-small) {
         display: block;
     }
 
@@ -483,7 +492,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: $c-bg-main;
+        background-color: $c-white;
         border-radius: 18px;
         padding: 14px;
         height: 100%;
@@ -524,52 +533,91 @@
     }
 
     &__content {
-        position: absolute;
-        right: 0;
-        top: calc(100% + 0px);
-        width: fit-content;
-        min-width: 360px;
-        background-color: $c-white;
-        border-radius: 24px;
-        padding: 15px 30px 15px;
         opacity: 0;
         visibility: hidden;
         transition: all $tr-time linear;
+        position: fixed;
+        top: 40px;
+        left: 0;
+        width: 100%;
+        padding: 28px 30px 15px;
+        height: calc(100% - 55px - 30px);
+        border-radius: 0 0 24px 24px;
+        border-top: 1px solid $c-border;
+        background-color: $c-white;
+        z-index: -1;
+        overflow-y: auto;
 
         @include max(mobile) {
-            position: fixed;
-            right: auto;
-            top: 40px;
-            left: 0;
-            width: 100%;
-            padding: 28px 30px 15px;
-            height: calc(100% - 55px - 30px);
-            border-radius: 0 0 24px 24px;
-            border-top: 1px solid $c-border;
-            z-index: -1;
-            overflow-y: auto;
+            padding: 20px 10px;
         }
     }
 
     &.active &__content {
-        top: calc(100% + 12px);
+        top: 56px;
         opacity: 1;
         visibility: visible;
-
-        @include max(mobile) {
-            top: 56px;
-        }
-
     }
 
     &__block {
         padding: 15px 0;
     }
 
-    &__block--flex {
+    &__links {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+
+        @include max(tablet) {
+            gap: 16px;
+        }
+    }
+
+    &__link {
         display: flex;
         align-items: center;
-        gap: 30px;
+        gap: 8px;
+        width: fit-content;
+        padding: 5px 10px;
+        font-family: $ff-inter;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0;
+        color: $c-text;
+        transition: all $tr-time linear;
+
+        @include max(tablet) {
+            padding: 0;
+        }
+
+        &:hover,
+        &:hover svg {
+            color: $c-accent-hover;
+        }
+
+        svg {
+            width: 18px;
+            height: 18px;
+            color: $c-text-breadcrumbs;
+            transition: all $tr-time linear;
+            margin-bottom: 3px;
+        }
+
+        span {
+            font-family: $ff-inter;
+            display: block;
+            align-self: center;
+            font-size: 80%;
+            background-color: $c-notifications;
+            color: $c-white;
+            padding: 1px 3.7px;
+            font-weight: 600;
+            line-height: 150%;
+            letter-spacing: 0;
+            border-radius: 50px;
+        }
     }
 
     &__block+&__block {
@@ -582,6 +630,10 @@
 
     position: relative;
     font-family: $ff-inter;
+
+    @include max(laptop-small) {
+        display: none;
+    }
 
     &__header {
         height: 100%;
@@ -611,6 +663,10 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+
+        @include max(laptop) {
+            font-size: 13px;
+        }
     }
 
     &__icon {
@@ -632,6 +688,59 @@
         svg {
             width: 11px;
             height: 10px;
+        }
+    }
+
+    &__content {
+        position: absolute;
+        right: 0;
+        min-width: 100%;
+        width: max-content;
+        padding: 12px 16px;
+        border-radius: 8px;
+        border: 1px solid #E0E0E0;
+        background-color: $c-white;
+        box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.05), 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
+        top: 100%;
+        opacity: 0;
+        visibility: hidden;
+        transition: all $tr-time linear;
+    }
+
+    &:hover &__content {
+        top: calc(100% + 4px);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &__link {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        width: fit-content;
+        padding: 8px 6px;
+        font-family: $ff-inter;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0;
+        color: $c-text;
+        transition: all $tr-time linear;
+
+        @include max(laptop) {
+            font-size: 13px;
+        }
+
+        &:hover,
+        &:hover svg {
+            color: $c-accent-hover;
+        }
+
+        svg {
+            width: 18px;
+            height: 18px;
+            color: $c-text-breadcrumbs;
+            transition: all $tr-time linear;
         }
     }
 }
