--- a/src/blocks/modules/img-intro/img-intro.scss
+++ b/src/blocks/modules/img-intro/img-intro.scss
@@ -1,137 +1,178 @@
 .img-intro {
-    &__bg::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(270deg, rgba(0, 0, 0, 0) 29.25%, rgba(0, 0, 0, 0.5) 71.7%),
-            linear-gradient(0deg, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+    &__bg {
+        left: 22.4%;
+
+        @include max(tablet) {
+            &:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                background-color: $c-bg-dark;
+                opacity: 0.6;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        @include max(mobile) {
+            left: 0;
+        }
     }
 
     &__block {
-        padding: 70px 60px;
+        padding: 78px 64px;
 
         @include max(laptop-small) {
             padding: 40px 30px;
         }
 
         @include max(tablet) {
-            padding: 20px;
+            padding: 20px 20px 30px;
         }
 
         @include max(mobile) {
-            padding: 20px 10px 80px;
+            padding: 20px 10px 30px;
         }
     }
 
     &__content {
         display: flex;
-        align-items: flex-start;
-    }
-
-    &__left {
-        flex: 0 0 auto;
-        display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 20px;
-        min-height: 430px;
-        max-width: 72%;
-        margin-right: 11%;
+        max-width: 770px;
 
-        @include max(laptop-small) {
-            max-width: 100%;
-            margin-right: 0;
+
+        @include max(laptop) {
+            max-width: 650px;
+        }
+    }
+
+    &__suptitle {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 150%;
+        letter-spacing: 0;
+
+        @include max(laptop) {
+            font-size: 20px;
+        }
+
+        @include max(mobile) {
+            font-size: 16px;
+        }
+    }
+
+    &__flex {
+        display: flex;
+        align-items: flex-start;
+        gap: 64px;
+        margin-top: 20px;
+
+        @include max(laptop) {
+            gap: 32px;
+        }
+
+        @include max(mobile) {
+            flex-direction: column;
+            gap: 10px;
+        }
+    }
+
+    &__subtitle {
+        flex: 0 1 50%;
+        font-family: $ff-inter;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 150%;
+        letter-spacing: 0;
+
+        @include max(laptop) {
+            font-size: 20px;
+        }
+
+        @include max(mobile) {
+            font-size: 16px;
+        }
+
+        span {
+            color: $c-accent-2;
+        }
+    }
+
+    &__tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px 64px;
+        margin-top: 52px;
+
+        @include max(laptop) {
+            gap: 20px 32px;
+            margin-top: 32px;
         }
 
         @include max(mobile) {
             gap: 10px;
-            min-height: auto;
-        }
-
-        &--centered {
-            justify-content: center;
-            max-width: 60%;
+            margin-top: 20px;
         }
     }
 
-    &__right {
-        @include max(laptop-small) {
-            display: none;
+    &__tag {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-family: $ff-inter;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0;
+        color: rgba(255, 255, 255, 0.6);
+
+        svg {
+            width: 14px;
+            height: 17px;
+            color: $c-accent-2;
         }
     }
 
-    &__title {
-        position: relative;
+    &__registration {
+        display: flex;
+        align-items: center;
+        gap: 32px;
+        margin-top: 52px;
+        width: 100%;
+
+        @include max(laptop) {
+            gap: 24px;
+            margin-top: 32px;
+        }
 
         @include max(mobile) {
-            display: contents;
-        }
-
-        &--right {
-            text-align: right;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
         }
     }
 
     &__text {
-        font-family: $ff-rooftop;
         font-weight: 500;
-        font-size: 20px;
-        line-height: 1.45em;
+        font-size: 16px;
+        line-height: 150%;
         letter-spacing: 0;
-        color: $c-white;
-
-        @include max(tablet) {
-            font-size: 18px;
-        }
 
         @include max(mobile) {
             font-size: 14px;
-            line-height: 1.57em;
         }
 
-        p+p {
-            margin-top: 1em;
-        }
+    }
 
-        &--right {
-            text-align: right;
+    &__btn {
+        padding-left: 46px;
+        padding-right: 46px;
+
+        @include max(xs) {
+            width: 100%;
         }
     }
 
-    &__sticker {
-        margin-top: 70px;
-        padding: 20px 40px;
-        transform: rotate(-15deg);
-        transform-origin: left top;
-
-        @include max(mobile) {
-            position: relative;
-            top: -16px;
-            padding: 20px 32px;
-        }
-
-        span {
-            color: $c-white;
-        }
-
-        &--title {
-            width: max-content;
-            position: absolute;
-            left: calc(100% + 47px);
-            top: 0;
-            margin-top: 0;
-            transform-origin: left bottom;
-
-            @include max(mobile) {
-                order: 2;
-                left: 0;
-                top: 0;
-                margin-top: 55px;
-                transform-origin: left top;
-            }
-        }
-    }
 }
