--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -106,7 +106,7 @@ body {
 	-webkit-locale: auto;
 	white-space: normal;
 	background-color: $c-bg-main;
-	font-family: $ff-rooftop;
+	font-family: $ff-inter;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.4em;
@@ -182,51 +182,9 @@ html.hystmodal__opened {
 		padding: 0 0px 30px;
 	}
 
-	&--title {
-		padding: 0 30px 30px;
-
-		@include max(large) {
-			padding: 0 20px 30px;
-		}
-
-		@include max(tablet) {
-			padding: 0 20px 20px;
-		}
-
-		@include max(mobile) {
-			padding: 0;
-		}
-	}
-
 	&__container {
 		width: 100%;
 		margin: 0 auto;
-	}
-
-	&__container--sidebar {
-		display: flex;
-		align-items: stretch;
-		gap: 20px;
-
-		@include max(tablet) {
-			flex-direction: column;
-		}
-	}
-
-	&__body {
-		flex: 0 1 100%;
-	}
-
-	&__sidebar {
-		flex: 0 0 453px;
-
-		@include max(laptop-small) {
-			flex-basis: 400px;
-		}
-	}
-
-	&__header {
-		margin-bottom: 20px;
 	}
 
 	&__content {
@@ -316,7 +274,6 @@ html.hystmodal__opened {
 
 	span {
 		color: $c-accent-2;
-		display: block;
 	}
 
 	h1,
@@ -335,25 +292,25 @@ html.hystmodal__opened {
 
 	&--64 {
 		font-size: 64px;
-		line-height: 1em;
+		line-height: 1.1em;
 		font-weight: 800;
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 
 		@include max(laptop) {
-			font-size: 40px;
+			font-size: 52px;
 		}
 
 		@include max(mobile) {
-			font-size: 32px;
+			font-size: 41px;
 		}
 
 		@include max(xs) {
-			font-size: 21px;
+			font-size: 27px;
 		}
 	}
 
 	/*&--40 {
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-size: 40px;
 		font-weight: 500;
 		line-height: 1em;
@@ -368,7 +325,7 @@ html.hystmodal__opened {
 	}*/
 
 	&--36 {
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-size: 36px;
 		font-weight: 500;
 		line-height: 1.2em;
@@ -383,7 +340,7 @@ html.hystmodal__opened {
 	}
 
 	&--30 {
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-size: 30px;
 		font-weight: 500;
 		line-height: 1.2em;
@@ -399,7 +356,7 @@ html.hystmodal__opened {
 	}
 
 	&--24 {
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-size: 24px;
 		font-weight: 700;
 		line-height: 1.2em;
@@ -415,7 +372,7 @@ html.hystmodal__opened {
 	}
 
 	/*&--18 {
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-size: 18px;
 		font-weight: 600;
 		line-height: 1em;
@@ -429,7 +386,7 @@ html.hystmodal__opened {
 }
 
 /*.title-sticker {
-	font-family: $ff-rooftop;
+	font-family: $ff-inter;
 	padding: 20px 25px;
 	color: $c-white;
 	background-color: $c-accent;
@@ -446,7 +403,7 @@ html.hystmodal__opened {
 	span {
 		display: block;
 		padding-top: 6px;
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-weight: 800;
 		font-size: 30px;
 		line-height: 1em;
@@ -526,7 +483,7 @@ html.hystmodal__opened {
 
 	h2,
 	h3 {
-		font-family: $ff-rooftop;
+		font-family: $ff-inter;
 		font-weight: 500;
 		font-size: 22px;
 		line-height: 1.3em;
