--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -273,4 +273,4 @@ mixin header(props = defaultHeaderProps)
                             name: 'Войти', 
                             cMode: 'accent',
                             sMode: 'content'
-                        })   
+                        })(data-modal="#loginModal")
