--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -28,6 +28,7 @@ $c-accent-hover: #2427e1;
 $c-notifications: #EF4444;
 $c-text-breadcrumbs: #878E9C;
 $c-bg-dark: #101010;
+$c-input-grey: #6B7280;
 
 
 $c-accent-2: #FC00FF;
@@ -41,7 +42,6 @@ $c-bg-input: #EDF0F6;
 $c-bg-compare: #F4F7F9;
 $c-grey: #202020;
 $c-controls-grey: #9DA2AD;
-$c-input-grey: #B3B7C0;
 $c-border: #E1E6EC;
 $c-error: #D31717;
 
@@ -51,7 +51,7 @@ $br-section-mob: 10px;
 $br-header-small: 20px;
 $br-header-big: 24px;
 $br-footer: 40px;
-$br-btn-input: 14px;
+$br-btn-input: 8px;
 
 // переходы
 $tr-time: .3s;
