--- a/src/blocks/components/btn/btn.scss
+++ b/src/blocks/components/btn/btn.scss
@@ -43,7 +43,7 @@
         }
     }
 
-    /*&--light-accent {
+    &--light-accent {
         color: $c-accent;
         background-color: $c-bg-main;
         border: 1px solid $c-accent;
@@ -66,7 +66,7 @@
         }
     }
 
-    &--bordered {
+    /*&--bordered {
         color: $c-accent;
         background-color: transparent;
         border: 1px solid $c-accent;
@@ -181,22 +181,17 @@
         padding-right: 20px;
     }
 
-    &--full {
-        width: 100%;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
+    
     &--content {
         width: fit-content;
+        }
+        
+        &--narrow {
+            width: fit-content;
+            padding-left: 20px;
+            padding-right: 20px;
     }
-
-    &--narrow {
-        width: fit-content;
-        padding-left: 20px;
-        padding-right: 20px;
-    }
-
+    
     &--small {
         padding: 10px 15px 10px 10px;
         font-size: 12px;
@@ -205,13 +200,19 @@
 
         @include max(mobile) {
             border-radius: 10px;
-        }
+            }
+            
+            svg {
+                width: 15px;
+                height: 15px;
+                }
+                }*/
 
-        svg {
-            width: 15px;
-            height: 15px;
-        }
-    }*/
+    &--full {
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 
     &--footer {
         font-family: $ff-inter;
