--- a/src/blocks/components/form/form.scss
+++ b/src/blocks/components/form/form.scss
@@ -21,10 +21,6 @@
         overflow: visible;
     }
 
-    &__horizontal {
-        width: 100%;
-    }
-
     &__thanks {
         gap: 15px;
         align-items: center;
@@ -36,15 +32,16 @@
 
     &__title {
         color: $c-text;
-        text-align: center;
         width: 100%;
-        padding: 0 34px;
-        font-family: $ff-inter;
-        font-weight: 500;
-        margin-bottom: 24px;
+        font-weight: 700;
     }
 
-    &__list-title {
+    &__subtitle {
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+
+    /*&__list-title {
         display: flex;
         align-items: center;
         gap: 34px;
@@ -97,7 +94,7 @@
         max-width: 640px;
         color: $c-text;
         opacity: 0.4;
-    }
+    }*/
 
     &__image-success {
         width: 178px;
@@ -113,7 +110,7 @@
     &__title+&__fields,
     &__text+&__fields,
     &__fields+&__fields {
-        margin-top: 24px;
+        margin-top: 16px;
     }
 
     &__fields {
@@ -398,21 +395,7 @@
     }
 
     &__submit.btn {
-        margin-top: auto;
-
-        @include max(mobile) {
-            padding: 15.5px 10px;
-            min-height: 45px;
-            border-radius: 10px;
-
-            .btn__text {
-                font-size: 15px;
-            }
-        }
-
-        @include max(xs) {
-            width: 100%;
-        }
+        margin-top: 4px;
     }
 
 }
@@ -428,60 +411,6 @@
         a:hover {
             color: $c-text-light;
         }
-    }
-}
-
-.form {
-    &--horizontal &__horizontal {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        @include max(laptop-small) {
-            flex-direction: column;
-            gap: 16px;
-        }
-
-        @include max(mobile) {
-            gap: 10px;
-        }
-    }
-
-    &--horizontal &__fields {
-        flex-direction: row;
-        align-items: center;
-        margin-bottom: 0;
-        gap: 10px;
-
-        @include max(mobile) {
-            flex-direction: column;
-        }
-    }
-
-    &--horizontal &__submit {
-        margin-top: 0;
-        flex: 0 0 auto;
-        width: fit-content;
-
-        @include max(laptop-small) {
-            width: 100%;
-        }
-    }
-
-    &--horizontal &__privacy {
-        flex: 0 0 100%;
-        margin-bottom: 0;
-        margin-top: 20px;
-
-        @include max(mobile) {
-            margin-top: 10px;
-        }
-    }
-
-    &--horizontal .form-privacy .form-privacy__text {
-        max-width: 100%;
-        font-size: 15px;
     }
 }
 
@@ -508,186 +437,7 @@
     }
 }
 
-.form {
-    &--modal &__fields {
-        gap: 16px;
-    }
-
-    &--modal .form__thanks .form__text {
-        max-width: 100%;
-        margin-top: 0;
-    }
-}
-
-.form {
-    &--list .form-privacy__text {
-        max-width: 100%;
-        font-size: 15px;
-    }
-
-    &--list &__fields {
-        display: grid;
-        gap: 15px;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        margin-top: 0;
-
-        @include max(tablet) {
-            .form__flex {
-                display: contents;
-            }
-
-            .form__flex .field {
-                max-width: 100%;
-            }
-        }
-
-        @include max(mobile) {
-            grid-template-columns: minmax(0, 1fr);
-        }
-    }
-
-    &--list &__fields--column {
-        grid-template-columns: minmax(0, 1fr);
-    }
-
-    &--list &__fields--3 {
-        grid-template-columns: minmax(0, 46%) repeat(2, minmax(0, 27%));
-    }
-}
-
-.form-auto {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-
-    @include max(tablet-small) {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    &__img {
-        flex: 0 1 50%;
-        aspect-ratio: 1 / 0.5625;
-        border-radius: 15px;
-        overflow: hidden;
-
-        @include max(tablet-small) {
-            flex-basis: auto;
-            width: 50%;
-        }
-
-        @include max(mobile) {
-            width: 100%;
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-    &__info {
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-        flex: 0 1 50%;
-
-        @include max(tablet-small) {
-            flex-basis: auto;
-            width: 100%;
-            gap: 16px;
-        }
-    }
-
-    &__title {
-        font-family: $ff-inter;
-        font-weight: 500;
-        font-size: 22px;
-        line-height: 130%;
-        letter-spacing: 0;
-        color: $c-text;
-
-        @include max(tablet-small) {
-            br {
-                display: none;
-            }
-        }
-
-        @include max(mobile) {
-            font-size: 18px;
-        }
-    }
-
-    &__prices {
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        max-width: 370px;
-
-        @include max(mobile) {
-            width: 100%;
-        }
-    }
-
-    &__price {
-        flex: 0 1 50%;
-        font-weight: 600;
-        font-size: 24px;
-        line-height: 100%;
-        letter-spacing: 0;
-        color: $c-text;
-        display: flex;
-        flex-direction: column;
-        gap: 3px;
-
-        @include max(tablet-small) {
-            flex: 0 0 auto;
-        }
-
-        @include max(mobile) {
-            font-size: 16px;
-            white-space: nowrap;
-        }
-
-        span {
-            font-weight: 400;
-            font-size: 15px;
-            line-height: 100%;
-            letter-spacing: 0;
-            font-size: 62.5%;
-            color: $c-text-breadcrumbs;
-        }
-    }
-
-    &__credit.title-sticker {
-        width: fit-content;
-        font-size: 16px;
-        padding: 15px 23px;
-
-        @include max(xs) {
-            width: 100%;
-            font-size: 14px;
-            padding: 10px 15px;
-        }
-
-        span {
-            font-size: 20px;
-
-            @include max(tablet-small) {
-                display: inline-block;
-                margin-left: 5px;
-            }
-
-            @include max(xs) {
-                font-size: 16px;
-            }
-        }
-    }
-
-}
-
-.logo-radios {
+/*.logo-radios {
     display: flex;
     align-items: center;
     gap: 20px;
@@ -755,7 +505,7 @@
         grid-template-columns: minmax(0, 1fr);
     }
 
-}
+}*/
 
 .checkboxes-flex {
     display: flex;
