manual adding in progress

--- a/src/blocks/components/field/field.scss
+++ b/src/blocks/components/field/field.scss
@@ -102,6 +102,7 @@
         transition: all $tr-time linear;
 
         @include max(mobile) {
+            font-size: 14px;
             padding: 12px;
         }
     }
