--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -5,3 +5,5 @@
 // sections
 @import "img-intro/img-intro";
 @import "common-list/common-list";
+@import "personal-data/personal-data";
+@import "manual-adding/manual-adding";
