--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -134,7 +134,9 @@ block content
                 .title.title--36.pages-list__subtitle Личный кабинет поставщика
                 .pages-list__links
                     a.pages-list__link.pages-list__link--check(href="supplier.html" target="_blank") Поставщик разводящая
-                    a.pages-list__link.pages-list__link--work(href="unload-db.html" target="_blank") Загрузить базу автомобилей
+                    a.pages-list__link.pages-list__link--check(href="s-personal-data.html" target="_blank") Личные данные
+                    a.pages-list__link.pages-list__link--work(href="s-manual-adding.html" target="_blank") Ручное добавление автомобиля
+                    a.pages-list__link.pages-list__link--check(href="s-upload-db.html" target="_blank") Загрузить базу автомобилей
 
                 .title.title--36.pages-list__subtitle Личный кабинет сотрудника
                 .pages-list__links
