--- a/src/blocks/modules/common-list/common-list.scss
+++ b/src/blocks/modules/common-list/common-list.scss
@@ -43,12 +43,9 @@
             border-radius: 8px;
         }
 
-
-        /*@include max(tablet) {
-            flex-direction: column;
-            align-items: flex-start;
-            padding: 15px 10px;
-        }*/
+        @include max(tablet) {
+            padding: 10px;
+        }
     }
 
     &__info {
@@ -67,6 +64,8 @@
         @include max(tablet) {
             margin-top: 0;
             margin-bottom: 0;
+            max-width: 50%;
+            flex: 0 0 50%;
         }
     }
 
@@ -111,6 +110,10 @@
         mask-clip: border-box;
         mask-size: 100% 100%;
         mask-image: url(../img/masks/link_card.svg);
+
+        @include max(mobile) {
+            flex: 0 0 47%;
+        }
 
         @include max(mobile) {
             max-width: 140px;
