--- a/src/blocks/modules/header/_header.scss
+++ b/src/blocks/modules/header/_header.scss
@@ -66,6 +66,10 @@
             padding: 6px;
         }
 
+        @include max(tablet-small) {
+            padding: 6px;
+        }
+
         @include max(mobile) {
             padding: 0;
         }
