--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -154,11 +154,11 @@ html.hystmodal__opened {
 	}
 
 	@include max(laptop-small) {
-		padding: 80px 0 0;
+		padding: 88px 0 0;
 	}
 
 	@include max(mobile) {
-		padding: 64px 0 0;
+		padding: 72px 0 0;
 	}
 
 }
@@ -186,6 +186,22 @@ html.hystmodal__opened {
 	&__content {
 		@include max(mobile) {
 			padding: 0 10px;
+		}
+	}
+
+	&--bc {
+		padding-bottom: 16px;
+
+		@include max(large) {
+			padding-bottom: 16px;
+		}
+
+		@include max(tablet) {
+			padding-bottom: 16px;
+		}
+
+		@include max(mobile) {
+			padding-bottom: 16px;
 		}
 	}
 
