--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -14,4 +14,5 @@ mixin mixins()
     include ../../blocks/modules/s-breadcrumbs/s-breadcrumbs
     include ../../blocks/modules/img-intro/img-intro
     include ../../blocks/modules/common-list/common-list
-
+    include ../../blocks/modules/personal-data/personal-data
+    include ../../blocks/modules/manual-adding/manual-adding
