auto-card in progress

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -6,8 +6,8 @@
 @import "btn/btn";
 @import "breadcrumbs/breadcrumbs";
 @import "socials/socials";
-//@import "price/price";
-//@import "slider-controls/slider-controls";
+@import "chat/chat";
+@import "slider-controls/slider-controls";
 //@import "catalog-card/catalog-card";
 //@import "prod-controls/prod-controls";
 //@import "story-card/story-card";
