--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -7,3 +7,4 @@
 @import "common-list/common-list";
 @import "personal-data/personal-data";
 @import "manual-adding/manual-adding";
+@import "auto-card/auto-card";
