--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -7,6 +7,8 @@ mixin mixins()
     include ../../blocks/components/modal/modal
     include ../../blocks/components/breadcrumbs/breadcrumbs
     include ../../blocks/components/socials/socials
+    include ../../blocks/components/slider-controls/slider-controls
+    include ../../blocks/components/chat/chat
 
     //- Модули
     include ../../blocks/modules/header/header
@@ -16,3 +18,4 @@ mixin mixins()
     include ../../blocks/modules/common-list/common-list
     include ../../blocks/modules/personal-data/personal-data
     include ../../blocks/modules/manual-adding/manual-adding
+    include ../../blocks/modules/auto-card/auto-card
