--- a/src/blocks/modules/modals/modals.pug
+++ b/src/blocks/modules/modals/modals.pug
@@ -388,7 +388,7 @@ noindex
                     },
                 })
 
-        //- Окно благодарности
+        //- Окно благодарности регистрации
         +modal({modalId:"thanksModal", modalTitle:"", classes:"right-modal"})
             .thanks-message
                 .thanks-message__image
@@ -398,3 +398,38 @@ noindex
                 .thanks-message__text <b>В течении 1-3 рабочих дней</b> <br>на указанный адрес почты будут отправлены учетные данные для входа на цифровую платформу
                 .thanks-message__email test@yandex.ru
                 .thanks-message__note Если по какой-то причине менеджер откажет в регистрации, то на указанную почту придет сообщение с указанием причины и списком дальнейших действий для устранения причин отказа
+
+        //- Окно "Разместить на сайтах Франк?"
+        +modal({modalId:"manualAddingModal", modalTitle:"", classes:"center-modal"})
+            .ma-modal
+                .title.ma-modal__title Разместить на сайтах Франк?
+                .ma-modal__btns
+                    +btn({
+                        name: 'Да',
+                        cMode: 'accent',
+                        sMode: 'full',
+                    })(data-modal="#carAddedModal")
+                    +btn({
+                        name: 'Нет',
+                        cMode: 'light-accent',
+                        sMode: 'full',
+                    })(data-hystclose)
+
+        //- Окно Автомобиль добавлен в базу
+        +modal({modalId:"carAddedModal", modalTitle:"", classes:"center-modal"})
+            .ca-modal
+                .ca-modal__image
+                    svg
+                        use(xlink:href=`img/sprites/sprite.svg#form_check`)
+                .title.title--30.ca-modal__title Автомобиль отправлен в&nbsp;базу Frank&nbsp;Auto
+                .ca-modal__btns
+                    +btn({
+                        name: 'Просмотр автомобиля',
+                        cMode: 'light-accent',
+                        sMode: 'full'
+                    })
+                    +btn({
+                        name: 'Добавить еще один автомобиль',
+                        cMode: 'accent',
+                        sMode: 'full'
+                    })
