--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -136,6 +136,7 @@ block content
                     a.pages-list__link.pages-list__link--check(href="supplier.html" target="_blank") Поставщик разводящая
                     a.pages-list__link.pages-list__link--check(href="s-personal-data.html" target="_blank") Личные данные
                     a.pages-list__link.pages-list__link--work(href="s-manual-adding.html" target="_blank") Ручное добавление автомобиля
+                    a.pages-list__link.pages-list__link--postponed(href="s-view-card.html" target="_blank") Просмотр карточки
                     a.pages-list__link.pages-list__link--check(href="s-upload-db.html" target="_blank") Загрузить базу автомобилей
 
                 .title.title--36.pages-list__subtitle Личный кабинет сотрудника
